--- a/index.html
+++ b/index.html
@@ -5,10 +5,298 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <style type="text/css" media="all"></style>
+    <style type="text/css" media="all">
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Sans-Serif;
+      }
+      .activity-main main {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+        /*height: calc(100vh - 50px);*/
+        background-color: ;
+      }
+      .activity-main main .container{
+        width: 100%;
+        height: 100%;
+      }
+      .activity-main main .container .fragment{
+        display: none;
+      }
+      .activity-main main .container .fragment.active{
+        display: block;
+      }
+      .activity-main footer {
+        width: 100%;
+        height: 50px;
+        max-width: 600px;
+        background-color:;
+        border-top: 1px solid #e8e8e8;
+        position: fixed;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 0);
+      }
+      .activity-main footer nav {
+        width: 100%;
+        height: 100%;
+        display: flex;
+      }
+      .activity-main footer nav .nav-btn {
+        flex: 1;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .activity-main footer nav .icon-wrapper {
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .activity-main footer nav .icon-wrapper .icon {
+        width: 100%;
+        height: 100%;
+      }
+      .activity-main footer nav .icon-wrapper .icon-solid {
+        display: none;
+      }
+      .activity-main footer nav .nav-btn.active .icon-wrapper .icon-regular {
+        display: none;
+      }
+      .activity-main footer nav .nav-btn.active .icon-wrapper .icon-solid {
+        display: block;
+      }
+      .fragment-home header{
+        width: 100%;
+      }
+      .fragment-home header nav{
+        width: 100%;
+        padding: 15px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: space-between;
+      }
+      .fragment-home header nav .nav-menu div{
+        height: 3px;
+        border-radius: 100px;
+        background-color: black;
+        transition: 0.3s ease-in;
+      }
+      .fragment-home header nav .nav-menu .top-bar{
+        width: 15px;
+      }
+      .fragment-home header nav .nav-menu .middle-bar{
+        width: 35px;
+        margin: 6px 0;
+      }
+      .fragment-home header nav .nav-menu .bottom-bar{
+        width: 22px;
+      }
+      .fragment-home header nav .nav-menu.active .top-bar{
+        width: 22px;
+        transform: rotate(45deg) translateY(3px);
+        transform-origin: left center;
+      }
+      .fragment-home header nav .nav-menu.active .middle-bar{
+        transform: translateX(-100px);
+      }
+      .fragment-home header nav .nav-menu.active .bottom-bar{
+        width: 22px;
+        transform: rotate(-45deg) translateY(-3px);
+        transform-origin: left center;
+      }
+    </style>
   </head>
   <body>
-    hhhh
-    <script type="text/javascript" charset="utf-8"></script>
+    <div class="activity-main">
+      <main>
+        <div class="container">
+          <div class="fragment fragment-home">
+            <header>
+              <nav>
+                <div class="nav-menu" onclick="this.classList.add('active')">
+                  <div class="top-bar"></div>
+                  <div class="middle-bar"></div>
+                  <div class="bottom-bar"></div>
+                </div>
+                <div class="nav-btn">
+                  
+                </div>
+              </nav>
+            </header>
+          </div>
+          <div class="fragment fragment-search">Search</div>
+          <div class="fragment fragment-conversation">Conversation</div>
+          <div class="fragment fragment-profile">Profile</div>
+        </div>
+      </main>
+      <footer>
+        <nav>
+          <div class="nav-btn">
+            <div class="icon-wrapper">
+              <div class="icon icon-regular">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <g>
+                    <path d="M13.819 4.666a2.815 2.815 0 0 0-3.638 0L4.795 9.12C4.305 9.526 4 10.167 4 10.866v6.945C4 19.078 4.952 20 6 20h2v-3.252c0-2.255 1.734-4.19 4-4.19s4 1.935 4 4.19V20h2c1.048 0 2-.922 2-2.19v-6.944c0-.699-.304-1.34-.795-1.746zm1.274-1.541 5.386 4.453c.97.803 1.521 2.019 1.521 3.288v6.945C22 20.066 20.266 22 18 22h-2a2 2 0 0 1-2-2v-3.252c0-1.268-.952-2.19-2-2.19s-2 .922-2 2.19V20a2 2 0 0 1-2 2H6c-2.266 0-4-1.934-4-4.19v-6.944c0-1.269.55-2.485 1.521-3.288l5.386-4.453a4.814 4.814 0 0 1 6.186 0z"></path>
+                  </g>
+                </svg>
+              </div>
+              <div class="icon icon-solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <g>
+                    <path d="m20.479 7.578-5.386-4.453a4.814 4.814 0 0 0-6.186 0L3.521 7.578C2.551 8.381 2 9.597 2 10.866v6.945C2 20.066 3.734 22 6 22h2a2 2 0 0 0 2-2v-3.252c0-1.268.952-2.19 2-2.19s2 .922 2 2.19V20a2 2 0 0 0 2 2h2c2.266 0 4-1.934 4-4.19v-6.944c0-1.269-.55-2.485-1.521-3.288z" clip-rule="evenodd" opacity="1" data-original="#000000"></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="nav-btn">
+            <div class="icon-wrapper">
+              <div class="icon icon-regular">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                  <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
+                </svg>
+              </div>
+              <div class="icon icon-solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M18.5 10.5a8 8 0 1 1-8-8 8 8 0 0 1 8 8Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
+                  <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="16.511" x2="21.643" y1="16.511" y2="21.643"></line>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="nav-btn">
+            <div class="icon-wrapper">
+              <div class="icon icon-regular">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <g>
+                    <path d="M24 11.247A12.012 12.012 0 1 0 12.017 24H19a5.005 5.005 0 0 0 5-5v-7.753ZM22 19a3 3 0 0 1-3 3h-6.983a10.041 10.041 0 0 1-7.476-3.343 9.917 9.917 0 0 1-2.476-7.814 10.043 10.043 0 0 1 8.656-8.761 10.564 10.564 0 0 1 1.3-.082A9.921 9.921 0 0 1 18.4 4.3a10.041 10.041 0 0 1 3.6 7.042Z"></path>
+                    <path d="M8 9h4a1 1 0 0 0 0-2H8a1 1 0 0 0 0 2ZM16 11H8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2ZM16 15H8a1 1 0 0 0 0 2h8a1 1 0 0 0 0-2Z"></path>
+                  </g>
+                </svg>
+              </div>
+              <div class="icon icon-solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <g>
+                    <path d="M19.675 2.758A11.936 11.936 0 0 0 10.474.1 12 12 0 0 0 12.018 24H19a5.006 5.006 0 0 0 5-5v-7.754a12.044 12.044 0 0 0-4.325-8.488ZM8 7h4a1 1 0 0 1 0 2H8a1 1 0 0 1 0-2Zm8 10H8a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Zm0-4H8a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Z"></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="nav-btn">
+            <div class="icon-wrapper">
+              <div class="icon icon-regular">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <path d="M399 384.2C376.9 345.8 335.4 320 288 320l-64 0c-47.4 0-88.9 25.8-111 64.2c35.2 39.2 86.2 63.8 143 63.8s107.8-24.7 143-63.8zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm256 16a72 72 0 1 0 0-144 72 72 0 1 0 0 144z" />
+                </svg>
+              </div>
+              <div class="icon icon-solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                  <path d="M399 384.2C376.9 345.8 335.4 320 288 320l-64 0c-47.4 0-88.9 25.8-111 64.2c35.2 39.2 86.2 63.8 143 63.8s107.8-24.7 143-63.8zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm256 16a72 72 0 1 0 0-144 72 72 0 1 0 0 144z" />
+                </svg>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </footer>
+    </div>
+    <script type="text/javascript" charset="utf-8">
+      let fragmentName = ["home", "search", "conversation", "profile"];
+      //location.replace(`#${fragmentName[0]}`);
+      let navigationHistory = [`${fragmentName[0]}`];
+      let navBtn = document.querySelectorAll(".activity-main footer nav .nav-btn");
+      let navBtnState = [{ isClicked: false }, { isClicked: false }, { isClicked: false }, { isClicked: false }];
+      navBtn.forEach((btn, index) => {
+        btn.addEventListener("click", e => {
+          if (!navBtnState[index].isClicked) {
+            if (navBtnState[0].isClicked) {
+              history.pushState({ fragment: `${fragmentName[index]}` }, "", `#${fragmentName[index]}`);
+            } else {
+              history.replaceState({ fragment: `${fragmentName[index]}` }, "", `#${fragmentName[index]}`);
+            }
+            window.dispatchEvent(new HashChangeEvent("hashchange"));
+          }
+        });
+      });
+
+      window.addEventListener("hashchange", e => {
+        let path = location.hash.replace("#", "");
+        let index = { home: 0, search: 1, conversation: 2, profile: 3 }[path] ?? 0;
+        switch (index) {
+          case 0:
+            let historyLength = history.length - 1;
+            if (historyLength > 0) {
+              for (let x = 0; x < historyLength; x++) {
+                history.back();
+              }
+            }
+            sessionStorage.setItem("fragment", `${fragmentName[index]}`);
+            break;
+          case 1:
+            sessionStorage.setItem("fragment", `${fragmentName[index]}`);
+            break;
+          case 2:
+            sessionStorage.setItem("fragment", `${fragmentName[index]}`);
+            break;
+          case 3:
+            sessionStorage.setItem("fragment", `${fragmentName[index]}`);
+            break;
+        }
+        navigationHistory.push(`${fragmentName[index]}`);
+        navBtnState.forEach(navBtnState => {
+          navBtnState.isClicked = false;
+        });
+        navBtnState[index].isClicked = true;
+        loadFragment(index);
+      });
+
+      window.addEventListener("DOMContentLoaded", e => {
+        let fragment = sessionStorage.getItem("fragment") || fragmentName[0];
+        let index = { home: 0, search: 1, conversation: 2, profile: 3 }[fragment] ?? 0;
+        switch (index) {
+          case 0:
+            location.replace(`#${fragmentName[index]}`);
+            break;
+          case 1:
+            location.hash = `#${fragmentName[index]}`;
+            break;
+          case 2:
+            location.hash = `#${fragmentName[index]}`;
+            break;
+          case 3:
+            location.hash = `#${fragmentName[index]}`;
+            break;
+        }
+        window.dispatchEvent(new HashChangeEvent("hashchange"));
+      });
+      let fragments = document.querySelectorAll(".activity-main main .container .fragment");
+      function loadFragment(index) {
+        fragments.forEach(fragment => {
+          fragment.classList.remove("active");
+        });
+        fragments[index].classList.add("active");
+        navBtn.forEach(btn => {
+          btn.classList.remove("active");
+        });
+        navBtn[index].classList.add("active");
+        /*switch (index) {
+          case 0:
+            break;
+          case 1:
+            break;
+          case 2:
+            break;
+          case 3:
+            break;
+        }*/
+      }
+    </script>
   </body>
 </html>
