--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       }
       .activity-main footer {
         width: 100%;
-        height: 50px;
+        height: 65px;
         max-width: 600px;
         background-color:;
         border-top: 1px solid #e8e8e8;
@@ -34,11 +34,21 @@
         justify-content: center;
         align-items: center;
       }
-      .activity-main footer nav .icon-wrapper {
-        width: 24px;
-        height: 24px;
+      .activity-main footer nav .nav-btn .wrapper {
         color: grey;
         fill: grey;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .activity-main footer nav .nav-btn.active .wrapper {
+        color: black;
+        fill: black;
+      }
+      .activity-main footer nav .nav-btn .icon-wrapper {
+        width: 24px;
+        height: 24px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -47,16 +57,32 @@
         width: 100%;
         height: 100%;
       }
-      .activity-main footer nav .nav-btn .icon-wrapper .icon-solid {
+      .activity-main footer nav .icon-wrapper .icon-solid {
         display: none;
       }
-      .activity-main footer nav .nav-btn.active .icon-wrapper .icon-regular {
-        display: none;
+      .activity-main footer nav .nav-btn.active .icon-regular {
+        /*display: none;*/
       }
-      .activity-main footer nav .nav-btn.active .icon-wrapper .icon-solid {
-        color: #333;
-        fill: #333;
-        display: block;
+      .activity-main footer nav .nav-btn.active .icon-solid {
+        /*display: block;*/
+      }
+      .activity-main footer nav .nav-btn .title-wrapper {
+        color: black;
+        font-size: 10px;
+        margin-top: 3px;
+        margin-bottom: 2px;
+        /*display: none;*/
+      }
+      .activity-main footer nav .nav-btn .active-bar {
+        width: 100%;
+        height: 3px;
+        border-radius: 100px;
+        background-color: #000;
+        visibility: hidden;
+        /*display: none;*/
+      }
+      .activity-main footer nav .nav-btn.active .active-bar {
+        visibility: visible;
       }
     </style>
   </head>
@@ -65,57 +91,92 @@
       <footer>
         <nav>
           <div class="nav-btn">
-            <div class="icon-wrapper">
-              <div class="icon icon-regular">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <g>
-                    <path d="M13.819 4.666a2.815 2.815 0 0 0-3.638 0L4.795 9.12C4.305 9.526 4 10.167 4 10.866v6.945C4 19.078 4.952 20 6 20h2v-3.252c0-2.255 1.734-4.19 4-4.19s4 1.935 4 4.19V20h2c1.048 0 2-.922 2-2.19v-6.944c0-.699-.304-1.34-.795-1.746zm1.274-1.541 5.386 4.453c.97.803 1.521 2.019 1.521 3.288v6.945C22 20.066 20.266 22 18 22h-2a2 2 0 0 1-2-2v-3.252c0-1.268-.952-2.19-2-2.19s-2 .922-2 2.19V20a2 2 0 0 1-2 2H6c-2.266 0-4-1.934-4-4.19v-6.944c0-1.269.55-2.485 1.521-3.288l5.386-4.453a4.814 4.814 0 0 1 6.186 0z"></path>
-                  </g>
-                </svg>
+            <div class="wrapper">
+              <div class="icon-wrapper">
+                <div class="icon icon-regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g>
+                      <path d="M13.819 4.666a2.815 2.815 0 0 0-3.638 0L4.795 9.12C4.305 9.526 4 10.167 4 10.866v6.945C4 19.078 4.952 20 6 20h2v-3.252c0-2.255 1.734-4.19 4-4.19s4 1.935 4 4.19V20h2c1.048 0 2-.922 2-2.19v-6.944c0-.699-.304-1.34-.795-1.746zm1.274-1.541 5.386 4.453c.97.803 1.521 2.019 1.521 3.288v6.945C22 20.066 20.266 22 18 22h-2a2 2 0 0 1-2-2v-3.252c0-1.268-.952-2.19-2-2.19s-2 .922-2 2.19V20a2 2 0 0 1-2 2H6c-2.266 0-4-1.934-4-4.19v-6.944c0-1.269.55-2.485 1.521-3.288l5.386-4.453a4.814 4.814 0 0 1 6.186 0z"></path>
+                    </g>
+                  </svg>
+                </div>
+                <div class="icon icon-solid">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g>
+                      <path d="m20.479 7.578-5.386-4.453a4.814 4.814 0 0 0-6.186 0L3.521 7.578C2.551 8.381 2 9.597 2 10.866v6.945C2 20.066 3.734 22 6 22h2a2 2 0 0 0 2-2v-3.252c0-1.268.952-2.19 2-2.19s2 .922 2 2.19V20a2 2 0 0 0 2 2h2c2.266 0 4-1.934 4-4.19v-6.944c0-1.269-.55-2.485-1.521-3.288z" clip-rule="evenodd" opacity="1" data-original="#000000"></path>
+                    </g>
+                  </svg>
+                </div>
               </div>
-              <div class="icon icon-solid">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <g>
-                    <path d="m20.479 7.578-5.386-4.453a4.814 4.814 0 0 0-6.186 0L3.521 7.578C2.551 8.381 2 9.597 2 10.866v6.945C2 20.066 3.734 22 6 22h2a2 2 0 0 0 2-2v-3.252c0-1.268.952-2.19 2-2.19s2 .922 2 2.19V20a2 2 0 0 0 2 2h2c2.266 0 4-1.934 4-4.19v-6.944c0-1.269-.55-2.485-1.521-3.288z" clip-rule="evenodd" opacity="1" data-original="#000000"></path>
-                  </g>
-                </svg>
+              <div class="title-wrapper">
+                <span>Home</span>
               </div>
+              <div class="active-bar"></div>
             </div>
           </div>
           <div class="nav-btn">
-            <div class="icon-wrapper">
-              <div class="icon icon-regular">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
-                  <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
-                </svg>
+            <div class="wrapper">
+              <div class="icon-wrapper">
+                <div class="icon icon-regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                    <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
+                  </svg>
+                </div>
+                <div class="icon icon-solid">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path d="M18.5 10.5a8 8 0 1 1-8-8 8 8 0 0 1 8 8Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
+                    <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="16.511" x2="21.643" y1="16.511" y2="21.643"></line>
+                  </svg>
+                </div>
               </div>
-              <div class="icon icon-solid">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M18.5 10.5a8 8 0 1 1-8-8 8 8 0 0 1 8 8Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"></path>
-                  <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" x1="16.511" x2="21.643" y1="16.511" y2="21.643"></line>
-                </svg>
+              <div class="title-wrapper">
+                <span>Search</span>
               </div>
+              <div class="active-bar"></div>
             </div>
           </div>
           <div class="nav-btn">
-            <div class="icon-wrapper">
-              <div class="icon icon-regular">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M13.5 12a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13.5 12Zm3.5-1.5a1.5 1.5 0 1 0 .001 3.001A1.5 1.5 0 0 0 17 10.5Zm-10 0a1.5 1.5 0 1 0 .001 3.001A1.5 1.5 0 0 0 7 10.5Zm17 1.84V19c0 2.757-2.243 5-5 5h-5.917C6.082 24 .47 19.208.03 12.854c-.241-3.476 1.027-6.878 3.479-9.333S9.363-.206 12.836.029C19.096.454 24 5.862 24 12.341Zm-2 0c0-5.431-4.084-9.962-9.299-10.316a10.015 10.015 0 0 0-7.777 2.91 10.019 10.019 0 0 0-2.899 7.782c.373 5.38 5.024 9.285 11.059 9.285h5.917c1.654 0 3-1.346 3-3v-6.66Z"></path></g></svg>
+            <div class="wrapper">
+              <div class="icon-wrapper">
+                <div class="icon icon-regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g><path d="M13.5 12a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13.5 12Zm3.5-1.5a1.5 1.5 0 1 0 .001 3.001A1.5 1.5 0 0 0 17 10.5Zm-10 0a1.5 1.5 0 1 0 .001 3.001A1.5 1.5 0 0 0 7 10.5Zm17 1.84V19c0 2.757-2.243 5-5 5h-5.917C6.082 24 .47 19.208.03 12.854c-.241-3.476 1.027-6.878 3.479-9.333S9.363-.206 12.836.029C19.096.454 24 5.862 24 12.341Zm-2 0c0-5.431-4.084-9.962-9.299-10.316a10.015 10.015 0 0 0-7.777 2.91 10.019 10.019 0 0 0-2.899 7.782c.373 5.38 5.024 9.285 11.059 9.285h5.917c1.654 0 3-1.346 3-3v-6.66Z"></path></g>
+                  </svg>
+                </div>
+                <div class="icon icon-solid">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g><path d="M12.836.029C9.362-.206 5.961 1.065 3.508 3.521S-.211 9.378.03 12.854C.47 19.208 6.082 24 13.084 24h5.917c2.757 0 5-2.243 5-5v-6.66C24 5.862 19.096.454 12.836.029ZM7 13.5a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 7 13.5Zm5 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 12 13.5Zm5 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 17 13.5Z"></path></g>
+                  </svg>
+                </div>
               </div>
-              <div class="icon icon-solid">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M12.836.029C9.362-.206 5.961 1.065 3.508 3.521S-.211 9.378.03 12.854C.47 19.208 6.082 24 13.084 24h5.917c2.757 0 5-2.243 5-5v-6.66C24 5.862 19.096.454 12.836.029ZM7 13.5a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 7 13.5Zm5 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 12 13.5Zm5 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 17 13.5Z"></path></g></svg>
+              <div class="title-wrapper">
+                <span>Messages</span>
               </div>
+              <div class="active-bar"></div>
             </div>
           </div>
           <div class="nav-btn">
-            <div class="icon-wrapper">
-              <div class="icon icon-regular">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z"></path></g></svg>
+            <div class="wrapper">
+              <div class="icon-wrapper">
+                <div class="icon icon-regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <g><path d="M12 12a6 6 0 1 0-6-6 6.006 6.006 0 0 0 6 6Zm0-10a4 4 0 1 1-4 4 4 4 0 0 1 4-4ZM12 14a9.01 9.01 0 0 0-9 9 1 1 0 0 0 2 0 7 7 0 0 1 14 0 1 1 0 0 0 2 0 9.01 9.01 0 0 0-9-9Z"></path></g>
+                  </svg>
+                </div>
+                <div class="icon icon-solid">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <g>
+                      <circle cx="256" cy="128" r="128" opacity="1" data-original="#000000"></circle>
+                      <path d="M256 298.667c-105.99.118-191.882 86.01-192 192C64 502.449 73.551 512 85.333 512h341.333c11.782 0 21.333-9.551 21.333-21.333-.117-105.99-86.009-191.883-191.999-192z"></path>
+                    </g>
+                  </svg>
+                </div>
               </div>
-              <div class="icon icon-solid">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><circle cx="256" cy="128" r="128" opacity="1" data-original="#000000"></circle><path d="M256 298.667c-105.99.118-191.882 86.01-192 192C64 502.449 73.551 512 85.333 512h341.333c11.782 0 21.333-9.551 21.333-21.333-.117-105.99-86.009-191.883-191.999-192z"></path></g></svg>
+              <div class="title-wrapper">
+                <span>Profile</span>
               </div>
+              <div class="active-bar"></div>
             </div>
           </div>
         </nav>
@@ -187,7 +248,7 @@
         }
         window.dispatchEvent(new HashChangeEvent("hashchange"));
       });
-      
+
       //let fragments = document.querySelectorAll(".activity-main main .container .fragment");
       function loadFragment(index) {
         /*fragments.forEach(fragment => {
