--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         left: 50%;
         bottom: 0;
         transform: translate(-50%, 0);
+        user-select: none;
       }
       .activity-main footer nav {
         width: 100%;
@@ -74,8 +75,8 @@
         /*display: none;*/
       }
       .activity-main footer nav .nav-btn .active-bar {
-        width: 100%;
-        height: 3px;
+        width: 25px;
+        height: 2px;
         border-radius: 100px;
         background-color: #000;
         visibility: hidden;
@@ -151,7 +152,7 @@
                 </div>
               </div>
               <div class="title-wrapper">
-                <span>Messages</span>
+                <span>Broadcast</span>
               </div>
               <div class="active-bar"></div>
             </div>
@@ -183,7 +184,7 @@
       </footer>
     </div>
     <script type="text/javascript" charset="utf-8">
-      let fragmentName = ["home", "search", "conversation", "profile"];
+      let fragmentName = ["home", "search", "broadcast", "profile"];
       let navBtn = document.querySelectorAll(".activity-main footer nav .nav-btn");
       let navBtnState = [{ isClicked: false }, { isClicked: false }, { isClicked: false }, { isClicked: false }];
       navBtn.forEach((btn, index) => {
@@ -201,7 +202,7 @@
 
       window.addEventListener("hashchange", e => {
         let path = location.hash.replace("#", "");
-        let index = { home: 0, search: 1, conversation: 2, profile: 3 }[path] ?? 0;
+        let index = { home: 0, search: 1, broadcast: 2, profile: 3 }[path] ?? 0;
         switch (index) {
           case 0:
             let historyLength = history.length - 1;
@@ -231,7 +232,7 @@
 
       window.addEventListener("DOMContentLoaded", e => {
         let fragment = sessionStorage.getItem("fragment") || fragmentName[0];
-        let index = { home: 0, search: 1, conversation: 2, profile: 3 }[fragment] ?? 0;
+        let index = { home: 0, search: 1, broadcast: 2, profile: 3 }[fragment] ?? 0;
         switch (index) {
           case 0:
             location.replace(`#${fragmentName[index]}`);
@@ -270,6 +271,7 @@
             break;
         }*/
       }
+      localStorage.clear();
     </script>
   </body>
 </html>
