--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
           if (!navBtnState[index].isClicked) {
             if (navBtnState[0].isClicked) {
               history.pushState({ fragment: `${fragmentName[index]}` }, "", `#${fragmentName[index]}`);
+              navHistory.push(fragmentName[index]);
             } else {
               history.replaceState({ fragment: `${fragmentName[index]}` }, "", `#${fragmentName[index]}`);
             }
@@ -199,18 +200,24 @@
           }
         });
       });
-
+      let navHistory = ["home"];
       window.addEventListener("hashchange", e => {
         let path = location.hash.replace("#", "");
         let index = { home: 0, search: 1, broadcast: 2, profile: 3 }[path] ?? 0;
         switch (index) {
           case 0:
-            let historyLength = history.length - 1;
+            /*let historyLength = history.length - 1;
             if (historyLength > 0) {
               for (let x = 0; x < historyLength; x++) {
                 history.back();
-              }
-            }
+              };
+            };*/
+            if(navHistory.length > 0){
+              for (let x = 0; x < navHistory.length; x++) {
+                history.back();
+              };
+            };
+            alert(navHistory.length)
             sessionStorage.setItem("fragment", `${fragmentName[index]}`);
             break;
           case 1:
@@ -270,7 +277,7 @@
           case 3:
             break;
         }*/
-      }
+      };
     </script>
   </body>
 </html>
