--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </header>
             <main>
               <div class="container">
-                <div class="fragment"><a href="auth.html">auth.html</a></div>
+                <div class="fragment">b</div>
                 <div class="fragment">h</div>
               </div>
             </main>
