--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         :root {
           --color: #ffffff;
           --colorForground: #ffffff;
-          --colorBackground: #000000;
+          --colorBackground: #2A2D36;
           --colorDevider: #333333;
         }
       }
