--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           --color: #ffffff;
           --colorForground: #ffffff;
           --colorBackground: #2A2D36;
-          --colorDevider: #4A4A64;
+          --colorDevider: #4A5060;
         }
       }
       body {
