--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           --color: rgba(255,255,255,1);
           --colorIcon: rgba(190,190,190,1);
           --colorForground: rgba(255,255,255,1);
-          --colorBackground: rgba(42,45,54, 1);
-          --colorDevider: rgba(255,255,255, 0.1);
+          --colorBackground: rgba(42,45,54,1);
+          --colorDevider: rgba(255,255,255,0.1);
         }
       }
       body {
@@ -222,7 +222,7 @@
             </header>
             <main>
               <div class="container">
-                <div class="fragment"></div>
+                <div class="fragment"><a class="Click me!" href="#home">Click me!</a></div>
                 <div class="fragment"></div>
               </div>
             </main>
