--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </header>
             <main>
               <div class="container">
-                <div class="fragment"><a class="Click me!" href="pages/error.html">Click me...!</a></div>
+                <div class="fragment"><a class="Click me!" href="/pages/error.html">Click me...!</a></div>
                 <div class="fragment"></div>
               </div>
             </main>
