--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <main>
               <div class="container">
                 <div class="fragment"><a class="Click me!" href="pages/error.html">Click me...!</a></div>
-                <div class="fragment"><input type="file" name="file" id="file" value="" /></div>
+                <div class="fragment"><input type="file" accept="image/*"></div>
               </div>
             </main>
           </div>
