--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             </header>
             <main>
               <div class="container">
-                <div class="fragment"><a class="Click me!" href="pages/error.html">Click me...!</a></div>
-                <div class="fragment"><input type="file" accept="image/*"></div>
+                <div class="fragment"></div>
+                <div class="fragment"></div>
               </div>
             </main>
           </div>
