--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           --color: rgba(255,255,255,1);
           --colorIcon: rgba(190,190,190,1);
           
-          --colorForground: red;
+          --colorForground: #fff;
           
           --colorBackground: rgba(42,45,54,1);
           --colorDevider: rgba(255,255,255,0.1);
