--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         :root {
           --color: rgba(255,255,255,1);
           --colorIcon: rgba(190,190,190,1);
-          
-          --colorForground: #fff;
-          
+          --colorForground: rgba(254,254,254,1);
           --colorBackground: rgba(42,45,54,1);
           --colorDevider: rgba(255,255,255,0.1);
         }
