--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         width: 25px;
         height: 2px;
         border-radius: 100px;
-        background-color: var(--colorIcon);
+        background-color: var(--color);
         visibility: hidden;
         /*display: none;*/
       }
