--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         :root {
           --color: rgba(255,255,255,1);
           --colorIcon: rgba(190,190,190,1);
-          --colorForground: rgba(254,254,254,1);
+          --colorForground: rgba(255,255,255,1);
           --colorBackground: rgba(42,45,54,1);
           --colorDevider: rgba(255,255,255,0.1);
         }
@@ -117,7 +117,7 @@
         width: 25px;
         height: 2px;
         border-radius: 100px;
-        background-color: var(--color);
+        background-color: var(--colorForground);
         visibility: hidden;
         /*display: none;*/
       }
